--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Konkani Leanrning Website</title>
 </head>
 <body>
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Website</h1>
+<p>By: Divakar Shenoy</p>
 </body>
 </html>
